<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="it.emgargano.famiapp.AddPathologyActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="@dimen/margin_top_layout"
        android:paddingLeft="8dp"
        android:paddingRight="8dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/edit_name_pathology"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pathologyName">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName">
            </android.support.design.widget.TextInputEditText>

        </android.support.design.widget.TextInputLayout>



        <android.support.design.widget.TextInputLayout
            android:id="@+id/edit_description_pathology"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine">
            </android.support.design.widget.TextInputEditText>

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/edit_nutritional_pathology"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nutritionalSuggestions">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine">
            </android.support.design.widget.TextInputEditText>

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/edit_lifestyle_pathology"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lifestyle">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine">
            </android.support.design.widget.TextInputEditText>

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/edit_medicines_pathology"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/medicines">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine">
            </android.support.design.widget.TextInputEditText>

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/buttonSavePathology"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="16dp"
            android:theme="@style/ButtonTheme"
            android:text="@string/add_button" />
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>